--- a/wallets_of_wallets/web/index.html
+++ b/wallets_of_wallets/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="wallets_of_wallets">
+  <meta name="apple-mobile-web-app-title" content="firstly">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>wallets_of_wallets</title>
+  <title>firstly</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
